- rotate some of the tool icons to reduce height of toolbox?

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects


DONE:
4/14/08 - show ice velocity vectors in zoomed view only, they clutter the birds-eye view
4/11/08 - fix Climate.getAblation, always add offset so that ablation is never zero 
4/11/08 - add flag for showing negative ablation in Glacial Budget chart
4/11/08 - change colors in Glacial Budget chart to match Archie's plots
4/11/08 - increase precision of snowfall textfield
4/11/08 - implement fix for negative glacier length in ice thickness model
4/9/08 - rename Glaciers.getX0 to Glaciers.getMinX, add Glaciers.getMaxX
4/9/08 - move 0-80km range details into Glacier class
4/9/08 - prevent *center* of zoomed viewport from being dragged any farther right than 80km
4/9/08 - prevent zoomed viewport from being dragged any farther right than 80km
3/25/08 - yet-another mountains image that doesn't line up (Archie is building scaling into the image!)
3/25/08 - new mountains image with alignment point, realign (valley floor contour is not correct)
3/25/08 - add alignment point for debugging alignment of mountains image
3/24/08 - new mountains image, realign (slightly off)
3/24/08 - add MountainsAndValleyNode to encapsulate image file
3/18/08 - first pass at using image for mountains and valley, offset via trial & error
******** 0.00.12 (20191)
3/7/08 - set some temporary axis ranges for time-based charts
3/7/08 - make headwall steeper
3/7/08 - show ice flow vectors in zoomed view only
3/7/08 - parameterize steepness and length of Valley with headwall
3/7/08 - visualization of ice velocity at stationary (x,z) locations
3/7/08 - bugfix in implementation of ice velocity model
3/6/08 - add all infrastructure and plumbing for ice velocities view